--- a/Part-3/phonebook-backend-step1-6/package.json
+++ b/Part-3/phonebook-backend-step1-6/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"	
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,7 @@
   "author": "'the-last-crusaderr'",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
